# gerby-web

./: .gitignore  Dockerfile  Readme.md  pyproject.toml
docs/: design.md  exampleGerby.toml  multipartDocuments.md
gerbyRunner/: cli.py  compiler.py  configManager.py  databases.py  monkeyPatchConfig.py  postInstall.py  runner.py  updateManager.py
podmanData/: config.yaml
podmanData/db/: comments.sqlite  fingerPieces.sqlite
scripts/: installEditableGerbyRunnerCommands
testPodman/: Readme.md  build  cleanupContainer  cleanupImage  enter  run
